--- a/css/common.css
+++ b/css/common.css
@@ -1,11 +1,35 @@
 @charset "UTF-8";
 
 @font-face {
-    src: url(../fonts/YouandiModernTR.eot);
-    src: url(../fonts/YouandiModernTR.woff);
-    src: url(../fonts/YouandiModernTR.ttf);
-    font-family: "YouandiModern";
-  }
+  src: url(../fonts/YouandiModernTR.eot);
+  src: url(../fonts/YouandiModernTR.woff);
+  src: url(../fonts/YouandiModernTR.ttf);
+  font-family: "YouandiModern";
+}
+@font-face {
+  src: url(../fonts/Youandi_Modern_HeadExtraBold.woff);
+  font-family: "YouandiModern Bold";
+}
+@font-face {
+  src: url(../fonts/Youandi_Modern_TextRegular.woff);
+  font-family: "YouandiModern Reg";
+}
+@font-face {
+  src: url(../fonts/Gotham-Book.woff);
+  font-family: "Gotham Book";
+}
+@font-face {
+  src: url(../fonts/Gotham-Bold.woff);
+  font-family: "Gotham Bold";
+}
+@font-face {
+  src: url(../fonts/AppleSDGothicNeoH.ttf);
+  font-family: "AppleSDGothicH";
+}
+@font-face {
+  src: url(../fonts/AppleSDGothicNeoM.ttf);
+  font-family: "AppleSDGothicM";
+}
 
 * {margin:0;padding:0;border:0;vertical-align:middle;box-sizing: border-box;}/*추가:box-sizing*/
 html, body {width:100%;height:100%;}/*추가:background*/
