--- a/css/queries.css
+++ b/css/queries.css
@@ -382,6 +382,7 @@
     position: relative;
     top: 0;
     margin-top: 0;
+    padding-bottom: 0;
     height: 100%;
   }
 
@@ -408,6 +409,7 @@
   #main #section01 .wrap .gap .container .section01-col01 .img-wrap a .img-box .left-wrap {
     width: calc(100% - 95px);
     height: 95px;
+    margin-top: 0;
     padding: 0 20px;
     line-height: 1rem;
   }
